# soothsayer

./: .env.example  .eslintrc.js  .gitignore  AGENTS.md  FILE_TREE.md  LICENSE  README.md  RUN_ALL.md  SECURITY.md  commitlint.config.js  docker-compose.dev.yml  docker-compose.yml  launch.sh  package.json  pnpm-lock.yaml  redis.smoke.mjs  run-all.sh  turbo.json
docs/: DAX_FAILURE_SCENARIOS_QA.md  DAX_RUN_CONSOLE_RUNTIME.md  DAX_WORKSTATION_MILESTONE_1.md  EC2_LIVE_DEPLOY.md  EC2_STABILIZATION_RUNBOOK.md  README.md  (+25 more)
workspace-mcp/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
workspace-mcp/docs/: KERNEL_API_V1.md
workspace-mcp/examples/minimal-project/: README.md  demo_flow.json  project_policy.yaml
workspace-mcp/spec-tests/: README.md  bundle_hash_cases.json  generate_bundle_hashes.py  meta_contract.json  run_lifecycle_cases.json  violation_cases.json
workspace-mcp/src/workspace_mcp/: __init__.py  capabilities.py  config.py  governor.py  hashing.py  mcp_logging.py  path_safety.py  policy_loader.py  response_schema.py  server.py  store.py
workspace-mcp/src/workspace_mcp/policies/: kernel_policy.yaml
workspace-mcp/src/workspace_mcp/tools/: __init__.py  apply_patch.py  change_bundle.py  explain_policy.py  kernel_version.py  read_file.py  repo_search.py  run_lifecycle.py  run_task.py  self_check.py  workspace_info.py
workspace-mcp/tests/: test_change_bundle.py  test_ci_strict_profile.py  test_contract_snapshot.py  test_explain_policy.py  test_meta_completeness.py  test_repo_search.py  test_run_lifecycle.py  test_safety.py  test_store.py
(+179 files in other folders)
