[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workspace-mcp"
version = "0.1.1"
description = "Deterministic, policy-governed MCP workspace kernel (stdio)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Shailesh" }]
dependencies = [
  "mcp>=1.0.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-PyYAML>=6.0.12.20240808",
]

[project.scripts]
workspace-mcp = "workspace_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
workspace_mcp = ["policies/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
ignore_missing_imports = false
